--- a/garden/notice.html
+++ b/garden/notice.html
@@ -276,7 +276,7 @@
                                                         <p class="title">放假</p>
                                                         <p class="desc">放假了.</p>
                                                         <p class="like">5 已读</p>
-                                                    </div>已读
+                                                    </div>
                                                 </div>
                                             </li>
                                             <!--<item>2</item>-->
@@ -306,7 +306,7 @@
                                                         <p class="title">放假</p>
                                                         <p class="desc">放假了.</p>
                                                         <p class="like">5 已读</p>
-                                                    </div>已读
+                                                    </div>
                                                 </div>
                                             </li>
                                             <!--<item>2</item>-->
@@ -336,7 +336,7 @@
                                                         <p class="title">放假</p>
                                                         <p class="desc">放假了.</p>
                                                         <p class="like">5 已读</p>
-                                                    </div>已读
+                                                    </div>
                                                 </div>
                                             </li>
                                             <!--<item>2</item>-->
@@ -366,7 +366,7 @@
                                                         <p class="title">放假</p>
                                                         <p class="desc">放假了.</p>
                                                         <p class="like">5 已读</p>
-                                                    </div>已读
+                                                    </div>
                                                 </div>
                                             </li>
                                             <!--<item>2</item>-->
@@ -396,7 +396,7 @@
                                                         <p class="title">放假</p>
                                                         <p class="desc">放假了.</p>
                                                         <p class="like">5 已读</p>
-                                                    </div>已读
+                                                    </div>
                                                 </div>
                                             </li>
                                             <!--<item>2</item>-->
@@ -426,7 +426,7 @@
                                                         <p class="title">放假</p>
                                                         <p class="desc">放假了.</p>
                                                         <p class="like">5 已读</p>
-                                                    </div>已读
+                                                    </div>
                                                 </div>
                                             </li>
                                             <!--<item>2</item>-->
@@ -456,7 +456,7 @@
                                                         <p class="title">放假</p>
                                                         <p class="desc">放假了.</p>
                                                         <p class="like">5 已读</p>
-                                                    </div>已读
+                                                    </div>
                                                 </div>
                                             </li>
                                             <!--<item>2</item>-->
@@ -486,7 +486,7 @@
                                                         <p class="title">放假</p>
                                                         <p class="desc">放假了.</p>
                                                         <p class="like">5 已读</p>
-                                                    </div>已读
+                                                    </div>
                                                 </div>
                                             </li>
                                             <!--<item>2</item>-->
@@ -516,7 +516,7 @@
                                                         <p class="title">放假</p>
                                                         <p class="desc">放假了.</p>
                                                         <p class="like">5 已读</p>
-                                                    </div>已读
+                                                    </div>
                                                 </div>
                                             </li>
                                             <!--<item>2</item>-->
@@ -546,7 +546,7 @@
                                                         <p class="title">放假</p>
                                                         <p class="desc">放假了.</p>
                                                         <p class="like">5 已读</p>
-                                                    </div>已读
+                                                    </div>
                                                 </div>
                                             </li>
                                             <!--<item>2</item>-->
