--- a/garden/downloadVideo.html
+++ b/garden/downloadVideo.html
@@ -16,6 +16,7 @@
     <link type="text/css" rel="stylesheet" href="vendors/font-awesome/css/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" href="vendors/bootstrap/css/bootstrap.min.css">
     <!--LOADING STYLESHEET FOR PAGE-->
+	 <link type="text/css" rel="stylesheet" href="vendors/lightbox/css/lightbox.css">
     <!--Loading style vendors-->
     <link type="text/css" rel="stylesheet" href="vendors/animate.css/animate.css">
     <link type="text/css" rel="stylesheet" href="vendors/jquery-pace/pace.css">
