--- a/jj.html
+++ b/jj.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>欢欢</title>
+<title>娟娟</title>
 </head>
 
 <body>
@@ -37,7 +37,7 @@ BLENDING = true;
 /* if empty the text will be a random number */
 var TEXT;
 num = 0;
-TEXTArray = [ "深爱", "欢欢", "直到", "永远"];
+TEXTArray = [ "深爱", "娟娟", "直到", "永远"];
 
 QUALITY_TO_FONT_SIZE = [10, 12, 40, 50, 100, 350];
 QUALITY_TO_SCALE = [20, 6, 4, 2, 0.9, 0.5];
