--- a/navigate.html
+++ b/navigate.html
@@ -1,3 +1,3 @@
  <script language="javascript" type="text/javascript">
-           window.location.href="http://map.baidu.com"; 
+           window.location.href="http://192.168.13.27/map"; 
     </script>
