--- a/navigate.html
+++ b/navigate.html
@@ -1,3 +1,3 @@
  <script language="javascript" type="text/javascript">
-           window.location.href="http://zm623.top"; 
+           window.location.href="http://zm623.top/juanjuan"; 
     </script>
